k8s/search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: restaurantes
spec:
  selector:
    app: search
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
